[package]
name = "wasm-bindgen-struct-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
attribute-derive = "0.6"
itertools = "0.10"
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
prettyplease = "0.2"
termdiff = "3"
wasm-bindgen = "0.2"

[registries.crates-io]
protocol = "sparse"